# tictactoe

./: CMakeLists.txt  README.md
include/: Board.h  ComputerPlayer.h  Game.h  HumanPlayer.h  Player.h  Utility.h
src/: Board.cpp  CMakeLists.txt  ComputerPlayer.cpp  Game.cpp  HumanPlayer.cpp  Player.cpp  Utility.cpp  main.cpp
